# melodious

./: .gitignore  CMakeLists.txt  Cargo.toml  build.sh  build.zig  build.zig.zon  main.ui  stub.c
src/: app.rs  controller.zig  fs.rs  fs.zig  library.rs  main.cpp  main.rs  main.zig  model.zig  painter.rs  player.rs  state.zig  update.zig  view.zig
src/components/: list.rs  mod.rs  searchbar.rs
